JumpScript/tests/baselines/reference/parserConstructorDeclaration7.errors.txt
tests/cases/conformance/parser/ecmascript5/ConstructorDeclarations/parserConstructorDeclaration7.jump(2,10): error TS1028: Accessibility modifier already seen.


==== tests/cases/conformance/parser/ecmascript5/ConstructorDeclarations/parserConstructorDeclaration7.jump (1 errors) ====
    class C {
      public private constructor() { }
             ~~~~~~~
!!! error TS1028: Accessibility modifier already seen.
    }